<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_movies_fragment_title">Популярные</string>
    <string name="favorite_movies_fragment_title">Избранные</string>
    <string name="try_again">Повторить</string>
    <string name="movie_poster_image_content_description">movie poster image</string>
    <string name="movie_name_sample_text">Изгой-один: Звездные...</string>
    <string name="favorite_movie_button_content_description">favorite movie button</string>
    <string name="added_to_favorite">Фильм добавлен в избранное</string>
    <string name="internet_connection_failed">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="unwailable_network_image">Unwailable network image</string>
</resources>