<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardCornerRadius="15dp"
    android:elevation="28dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginHorizontal="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/movieListItem"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_width="40dp"
            android:layout_height="63dp">
            <ImageView
                android:id="@+id/imageMoviePoster"
                android:src="@drawable/movie_poster_image_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster_image_content_description" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movieTitle"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/movie_name_sample_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/buttonIsFavorite"
                    android:visibility="invisible"
                    android:src="@drawable/favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/favorite_movie_button_content_description" />

            </LinearLayout>
            
            <TextView
                android:id="@+id/movieGenreTitle"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/movie_genre_sample_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
